# hcc

./: .gitignore  .gitmodules  .hgignore  .project  2dLB_C.c  2dLB_cuda.cu  2dLB_gl.cpp  CMakeLists.txt  Jenkinsfile  LAST_KNOWN_GOOD_CONFIG.md  LAST_KNOWN_GOOD_CONFIG.txt  LICENSE.TXT  README.TXT  README.md  SYNC_UPSTREAM.md  default.xml  docker-compose.yml
Bolt/: CMakeLists.txt  FindOpenCL.cmake  FindTBB.cmake  LICENSE.txt  README.md
Bolt/automation/: README.txt  bolt_bench.cmd  bolt_build.cmd  bolt_build.sh  bolt_test.cmd  bolt_test.sh  filename.append.py
Bolt/bench/: CMakeLists.txt  benchmark.bat  commonPerformance.py
Bolt/bench/Benchmark/: Benchmark.cpp  CMakeLists.txt  data_type.h
Bolt/bench/PerformanceMeasure/: README  RUN_BENCHMARK.py  benchmark.bat  benchmark.py  commonPerformance.py  errorHandler.py  measurePerformance.py  performanceTesting.py  plotPerformance.py
Bolt/bench/amp/: CMakeLists.txt
Bolt/bench/cl/: CMakeLists.txt
Bolt/benchmarkPackage/: CMakeLists.txt  FindBolt.cmake  FindTBB.cmake  README.txt
Bolt/benchmarkPackage/Benchmark/: Benchmark.cpp  CMakeLists.txt  statisticalTimer.cpp  statisticalTimer.h
Bolt/bolt/: AsyncProfiler.cpp  miniDump.cpp  statisticalTimer.cpp
Bolt/bolt/amp/: CMakeLists.txt  bolt.cpp  control.cpp
Bolt/bolt/cl/: CMakeLists.txt  bolt.cpp  control.cpp
Bolt/doxy/: CMakeLists.txt  README  README.html  SupportedFunction.dox  bolt.doxy.cfg.in  bolt.doxy.lin.cfg.in  buildingBolt.dox  buildingExamples.dox  buildingTBB.dox  clcodestring.dox  distributingBoltProjects.dox  faq.dox  mainpage.dox
Bolt/examples/: CMakeLists.txt.in  FindBolt.cmake  FindOpenCL.cmake  FindTBB.cmake
Bolt/examples/DeviceVector/: CMakeLists.txt  deviceVector.cpp
Bolt/examples/Hessian/: CMakeLists.txt  Hessian.cpp  Hessian.h  README.txt  bitmap_headers.h  cmd.bat  hessian.cl  hessian_amp.cpp  hessian_amp.h  hessian_amp_range.cpp  hessian_amp_range.h  hessian_boltcl.cpp  hessian_boltcl.h  hessian_cpuserial.cpp  hessian_cpuserial.h  hessian_ocl.cpp  hessian_ocl.h  hessian_oclcpp.cpp  hessian_oclcpp.h  hessian_tbb.cpp  hessian_tbb.h  image_utils.cpp  image_utils.h  main.cpp  matrix_utils.h  myocl.cpp  myocl.h  myocl_bufferpool.h  myoclcpp.cpp
Bolt/examples/Scan/: CMakeLists.txt  scan.cpp
Bolt/examples/Sort/: CMakeLists.txt  sort.cpp
Bolt/examples/StdDev/: CMakeLists.txt  StdDev.cpp
Bolt/examples/Transform/: CMakeLists.txt  Transform.cpp
Bolt/examples/Version/: CMakeLists.txt  version.cpp
Bolt/include/bolt/: AsyncProfiler.h  BoltLog.h  BoltVersion.h.in  countof.h  miniDump.h  (+1 more)
Bolt/superbuild/: CMakeLists.txt  ExternalBoost.cmake  ExternalDoxygen.cmake  ExternalGtest.cmake  gtest-port.h  internal_utils.gTest.vs11.patch.cmake
Bolt/test/: CMakeLists.txt
Bolt/tools/: AddLicenceInformation.py  CMakeLists.txt
amp-conformance/: CMakeLists.txt  amdgpu-faillist.txt  amdgpu-passlist.txt  output-to-junit.pl  passlist.txt  run_tests.pl.in  test_main.h  test_one.pl.in
amp-conformance/docs/: C++_AMP_conformance_suite_readme.docx
axtor/: CMakeLists.txt  LICENSE  README  README-origin  TODO
axtor/lib/: CMakeLists.txt
axtor/tools/: CMakeLists.txt
cmake-tests/: CMakeLists.txt  cmake-test.cpp  test-install.sh
demos/: CMakeLists.txt
demos/LB_Demo/: 2dLB_cuda.cu  2dLB_gl.cpp  CMakeLists.txt
doc/: CMakeLists.txt
doc/markdown/: Home.md  hcc_profile.md
hcc_config/: CMakeLists.txt  hcc_config.cpp  hcc_config.hxx.in
include/: CMakeLists.txt  __coordinate  am.h  amp.h  amp_allocator.h  amp_cpu.h  amp_cpu_launch.h  amp_cpu_manage.h  amp_cpu_math.h  amp_exception.h  amp_exception.inl  amp_impl.h  amp_manage.h  amp_math.h  amp_pfe.inl  amp_runtime.h  amp_short_vectors.h  array_view  array_view.h  atomics.hpp  cl_manage.h  coordinate  declspec_get.h  gmac_manage.h  grid_launch.h  grid_launch.hpp  hc.hpp  hc_aligned_alloc.h  hc_am.hpp  hc_am_internal.hpp  hc_callable_attributes.hpp  hc_defines.h  hc_exception.h  hc_hsa_op_id.h  hc_index.h  hc_launch.h  hc_math.h  hc_math.hpp  hc_norm_unorm.hpp  hc_norm_unorm.inl  (+40 more)
include/experimental/: CMakeLists.txt  algorithm  algorithm_old  exception_list  execution_policy  numeric
include/hc/: CMakeLists.txt  hc.hpp  hc_agent_pool.hpp  hc_aligned_alloc.hpp  hc_am.hpp  hc_am_internal.hpp  hc_atomics.hpp  hc_callable_attributes.hpp  hc_completion_future.hpp  hc_defines.hpp  hc_exception.hpp  hc_index.hpp  hc_kernel_emitter.hpp  hc_launch.hpp  hc_math.hpp  hc_norm_unorm.hpp  hc_printf.hpp  hc_queue_pool.hpp  hc_rt_debug.hpp  hc_runtime.hpp  hc_short_vector.hpp  hc_signal_pool.hpp
lib/: CMakeLists.txt  HSAContext.h  HSAContextKaveri.cpp  HowToUpdateHSAMathBC.txt  HowToUpdateOpenCLMathBC.txt  am_cpu.cpp  amd_gcn.bc  amd_gcn.ll  builtins-hsail.opt.bc  clamp-assemble.in  clamp-config.hxx.in  clamp-device.in  clamp-embed.in  clamp-hsail.in  clamp-hsatools.in  clamp-link.in  clamp-preprocess.in  clamp-spirify.in  doxygen_config.in  elf_utils.cpp  elf_utils.hpp  error-check.in  extractkernel.in  fileUtils.h  hc-host-assemble.in  hc-kernel-assemble.in  hcc-config.cmake.in  hsa_builtins.hsail  hsa_math.bc  hsa_math.ll  hsail-amdgpu-wrapper.ll  import-hsa.cmake  import-unwind.cmake  mcwamp.cpp  mcwamp_atomic.cpp  mcwamp_hsa.cpp  mcwamp_impl.hpp  mcwamp_main.cpp  mcwamp_opencl.cpp  md5.cpp  (+6 more)
lib/clang-plugins/: CMakeLists.txt  EligibleSTLCallName.def  ParallelRewriter.cpp  ParallelRewriter.h  StmtRewriter.cpp  StmtRewriter.exports
lib/cpu/: CMakeLists.txt  mcwamp_cpu.cpp
lib/hcc_device_hsail/: CMakeLists.txt  HowToUpdateHSAMathBC.txt  hsa_builtins.hsail  hsa_math.bc  hsa_math.ll
lib/hip/: CMakeLists.txt  hip_runtime.cpp
lib/hsa/: CMakeLists.txt  HSAContext.h  HSAContextKaveri.cpp  activity_prof.h  elf_utils.cpp  elf_utils.hpp  hc_am.cpp  hc_profile.cpp  mcwamp_hsa.cpp  staging_buffer.cpp  staging_buffer.h  unpinned_copy_engine.cpp  unpinned_copy_engine.h
lib/opencl/: CMakeLists.txt  mcwamp_opencl.cpp
lib/opencl_11/: CMakeLists.txt  mcwamp_opencl_11.cpp
lib/opencl_12/: CMakeLists.txt  mcwamp_opencl_12.cpp
libc++/: CMakeLists.txt
mcwhip/: CMakeLists.txt  hip-cuda.h  hip_runtime.cpp  hip_runtime.h
(+3981 files in other folders)
